# procedural-programming

./: .gitignore  README.md  README.txt  output.qdf  stretch-programs.sln
.ai/: pdf-md-toolchain.md  pdf-raw-text.md  pdf-reconnaissance.md
.config/: dotnet-tools.json
cpp/: README.md  add_gpp_to_path.ps1
cpp/.mingw_install/: include.7z  install_script.old.ps1  install_script.ps1  version_info.txt.7z  winlibs-x86_64-posix-seh-gcc-14.2.0-mingw-w64ucrt-12.0.0-r3.zip.REMOVED.git-id
cpp/Unit-0/: README.md
cpp/Unit-1/1.1-Output/exercise11-alignMoney/tests/: CMakeLists.txt  test.cpp
cpp/Unit-1/1.1-Output/exercise11-alignMoney/tests/test.dSYM/Contents/Resources/Relocations/x86_64/: test.yml
cpp/Unit-2/: 2.1 Debugging
cpp/Unit-4/: 4.2-String-Class
cpp/tests/: test_1-1-alignMoney.cpp
cs/: README.md  install_csc.ps1
cs/.dotnet_install/: install_script.ps1
cs/Unit-0/: README.md
go/: README.md
java/: README.md
java/.openjdk_install/: install_script.ps1  sample_output.md
java/Unit-0/: README.md
js/: README.md
js/.node_install/: install_script.ps1
js/1-1-alignMoney/: 1-1-alignMoney.js  1-1-alignMoney.test.js  README.md  alignMoney.test.js  eslint.config.js  package.json  vite.config.js  vitest.config.js
js/assignment11/: README.md  assignment11.js  assignment11.test.js  instructions  package.json
js/exercise11-alignMoney/: README.md  alignMoney.js  alignMoney.test.js  package.json
js/keys/: 1-1-alignMoney.js
python/: README.md
python/1-1-alignMoney/: README.md  align_money.py
ruby/: README.md
sqlite/: README.md
(+120 files in other folders)
